Fix broken layout in Boost theme with Moodle 3.2.

--- a/styles.css
+++ b/styles.css
@@ -152,8 +152,12 @@ div.coderunner-test-results.partial {
 
 
 /* Editing form. */
-body#page-question-type-coderunner #id_custom_template {
+body#page-question-type-coderunner div.edit_code textarea {
     width: 100%;
+}
+
+body#page-question-type-coderunner .ace_wrapper {
+    border: 1px solid #bbb;
 }
 
 body#page-question-type-coderunner div[id^=fitem_id_],
